# PowerAgent

./: .gitignore  ARCHITECTURE.md  CLAUDE_CODE_STEP_1.md  HANDOFF_STEP_10.md  HANDOFF_STEP_11.md  HANDOFF_STEP_12.md  HANDOFF_STEP_2.md  HANDOFF_STEP_4.md  HANDOFF_STEP_5.md  HANDOFF_STEP_6.md  HANDOFF_STEP_7.md  HANDOFF_STEP_8.md  HANDOFF_STEP_9.md  IMPLEMENTATION_ROADMAP.md  README.md  config.yaml  pyproject.toml
.claude/: launch.json
observability/: .env  README.md
src/: cli.py  seed.py
src/agent/: graph.py  llm_provider.py  state.py  tools.py  tracing.py  units.py
src/db/: connection.py  schema.sql
src/ingest/: backfill.py  commit.py  correct.py  embed.py  extract.py  knowledge.py  loaders.py  models.py  reembed.py  review.py  stage.py
src/tools/: admin.py  draft.py  organize.py  queries.py  resolve.py  sql.py  stats.py  vector.py
src/ui/: __init__.py  app.py  backfill_tab.py  chat_tab.py  devtools_tab.py  driver.py  editing.py  organizer_tab.py  trends.py  trends_tab.py
tests/: conftest.py  test_admin.py  test_cli.py  test_devtools_ui.py  test_organize.py  test_queries.py  test_resolve.py  test_schema.py  test_sql.py  test_stats.py  test_trends.py  test_ui.py  test_vector.py
tests/agent/: conftest.py  test_graph_analyze.py  test_graph_generate.py  test_graph_ingest.py  test_graph_update_stats.py  test_llm_provider.py  test_router.py  test_tracing.py  test_units.py
tests/ingest/: test_backfill.py  test_commit.py  test_correct.py  test_embed.py  test_extract.py  test_get_llm.py  test_knowledge.py  test_loaders.py  test_reembed.py  test_review.py  (+1 more)
(+22 files in other folders)
