[project]
name = "powerlifting-coach"
version = "0.1.0"
description = "Local, agentic RAG system for powerlifting training analysis and program generation."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "chromadb>=0.5",
    "sqlglot>=25.0",
    "langgraph>=1.0",
    "langgraph-checkpoint-sqlite>=3.0",
    "langchain-ollama>=1.0",
    "langchain-anthropic>=1.0",
    "anthropic>=0.60",
    "openpyxl>=3.1",
    "pypdf>=6.0",
    "streamlit>=1.40",
    "pandas>=2.0",
    "altair>=5.0",
    "langfuse>=3.0",
    "langchain>=1.0",  # required by langfuse.langchain.CallbackHandler
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
